@@ -12,12 +12,17 @@
 using namespace fostlib;
 
 
-const setting< string > c_pop3_test_account(
-    "fost-inet/Cpp/fost-inet-test/pop3.cpp",
-    "POP3 client test", "Username",
-    "pop3test@felspar.net", true);
-
 const setting< string > c_smtp_host(
     "fost-internet/Cpp/fost-inet-tests/smtp.cpp",
     "fost-internet tests", "SMTP server",
     "localhost", true);
+
+const setting< string > c_pop3_server(
+    "fost-inet/Cpp/fost-inet-test/pop3.cpp",
+    "fost-internet tests", "POP3 server",
+    "imap.felspar.net", true);
+
+const setting< string > c_pop3_test_account(
+    "fost-inet/Cpp/fost-inet-test/pop3.cpp",
+    "POP3 client test", "Username",
+    "pop3test@felspar.net", true);
