@@ -11,5 +11,6 @@
 
 
 extern const fostlib::setting< fostlib::string > c_smtp_host;
+extern const fostlib::setting< fostlib::string > c_pop3_server;
 extern const fostlib::setting< fostlib::string > c_pop3_test_account;
 
